--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "watch": "node --watch server.js"
+    "watch": "node  --env-file=.env  --watch server.js"
   },
   "dependencies": {
     "express": "^4.21.2",
